# stasys

./: .gitignore  CMakeLists.txt  CalibrationThread.cpp  CalibrationThread.h  Info.plist  MicThread.h  NavBarButton.qml  README.md  RecordThread.cpp  RecordThread.h  ShootController.h  ShootThread.cpp  ShootThread.h  Shot.cpp  Shot.h  ShotGroupListModel.qml  ShotLogListModel.qml  ShotStat.qml  ShotTrace.cpp  ShotTrace.h  SoundPressureSensor.cpp  SystemClock.cpp  SystemClock.h  Utils.h  cvcamera.cpp  cvcamera.h  main.cpp  main.qml  qml.qrc  qmlcppbridge.cpp  qmlcppbridge.h  stasys-cli.cpp  stasys-qt.pro
cvcamview/: BetterVideoCapture.cpp  BetterVideoCapture.h  CVCamera.cpp  CVCamera.h  CameraThread.cpp
